--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Brighter Arizona LED - Professional Lighting Solutions</title>
-  <!-- Montserrat for Bold Look -->
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;600;500;400&display=swap" rel="stylesheet">
+  <!-- Google Fonts: Montserrat for the crisp, bold look -->
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700;600;500;400&display=swap" rel="stylesheet" />
   <!-- Font Awesome for icons -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" />
   <style>
@@ -15,10 +15,9 @@
       --yellow: #ffd839;
       --text-light: #fff;
       --text-muted: #c9cad3;
-      --card-bg: #1b1f2e;
+      --card-bg: #181e2d;
       --gray-dark: #191c28;
     }
-
     html, body {
       background: var(--blue-dark);
       color: var(--text-light);
@@ -31,16 +30,12 @@
       display: flex;
       flex-direction: column;
     }
-    /* NAV BAR */
     nav {
       display: flex;
       align-items: center;
       justify-content: space-between;
       background: var(--blue-dark);
       padding: 1.2rem 2vw 1.2rem 2vw;
-      position: sticky;
-      top: 0;
-      z-index: 20;
       border-bottom: 1px solid #20243b;
     }
     .nav-logo {
@@ -86,17 +81,15 @@
     .nav-btn:hover {
       background: #ffe46e;
     }
-
-    /* HERO SECTION */
     .hero {
-      min-height: 49vh;
+      min-height: 45vh;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       padding: 3.6rem 1.2rem 2.6rem 1.2rem;
-      background: var(--blue-dark);
       text-align: center;
+      background: var(--blue-dark);
     }
     .hero-title {
       font-size: 3rem;
@@ -142,8 +135,6 @@
     .hero-actions button:hover {
       background: #ffe46e;
     }
-
-    /* SERVICE SECTION */
     .services-section {
       background: #232941;
       padding: 3em 1.1em 2.5em;
@@ -200,8 +191,6 @@
       color: #cccccc;
       margin-top: 0.23em;
     }
-
-    /* WHY CHOOSE US */
     .why-section {
       background: var(--blue-dark);
       padding: 3.6em 1.1em 2.05em;
@@ -262,24 +251,45 @@
       font-size: 1.01rem;
       margin: 0;
     }
-    /* CONTACT FORM */
+    /* CONTACT FORM SECTION */
     .contact-section {
       background: var(--gray-dark);
-      padding: 3em 1em 2em 1em;
+      padding: 3.8em 1em 3em 1em;
       display: flex;
-      flex-direction: column;
-      align-items: center;
       justify-content: center;
+      align-items: flex-start;
       min-height: 350px;
     }
-    .contact-title {
-      color: var(--yellow);
-      font-size: 2rem;
-      font-weight: 700;
-      margin-bottom: 0.4em;
-      text-align: center;
+    .contact-col {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      min-width: 280px;
+      max-width: 340px;
+      margin-right: 3vw;
+      gap: 1.7em;
     }
-    .contact-wrap {
+    .contact-heading {
+      color: var(--yellow);
+      font-size: 1.35rem;
+      font-weight: 700;
+      margin-bottom: 0.6em;
+    }
+    .contact-item {
+      font-size: 1.11rem;
+      display: flex;
+      align-items: center;
+      color: #cecece;
+      gap: 0.8rem;
+      background: none;
+    }
+    .contact-item i {
+      font-size: 1.35rem;
+      width: 29px;
+      color: var(--yellow);
+    }
+    /* CONTACT FORM STYLES */
+    .contact-form-col {
       background: var(--card-bg);
       padding: 2.2em 2em 1.9em 2em;
       border-radius: 15px;
@@ -288,21 +298,14 @@
       box-shadow: 0 6px 25px rgba(0,0,0,0.13);
       text-align: left;
     }
-    .contact-item {
-      font-size: 1.10rem;
-      margin-bottom: 1.2rem;
-      display: flex;
-      align-items: center;
-      color: #cecece;
-      gap: 0.8rem;
-    }
-    .contact-item i {
-      font-size: 1.36rem;
-      width: 26px;
+    .contact-form label {
       color: var(--yellow);
+      font-weight: 500;
+      font-size: 1.05rem;
+      display: block;
+      margin-bottom: 0.41em;
     }
-    /* Simple contact form: */
-    .contact-form input, .contact-form textarea {
+    .contact-form input, .contact-form textarea, .contact-form select {
       width: 100%;
       padding: 1em;
       border-radius: 9px;
@@ -318,14 +321,14 @@
       color: #a5adc2;
     }
     .contact-form textarea {
-      min-height: 110px;
+      min-height: 90px;
     }
     .contact-form button {
       background: var(--yellow);
       color: var(--blue-dark);
       border: none;
       border-radius: 9px;
-      font-size: 1.07rem;
+      font-size: 1.09rem;
       font-weight: 700;
       padding: 1em 0;
       width: 100%;
@@ -333,33 +336,37 @@
       letter-spacing: 1.2px;
       box-shadow: 0 1.5px 7px rgba(10,10,10,0.11);
       transition: background 0.14s;
+      margin-top: 0.7em;
     }
     .contact-form button:hover {
       background: #ffe46e;
     }
-    /* FOOTER */
-    footer {
+    .form-success {
+      background: #e0ffd5;
+      color: #06330c;
+      padding: 1em 1.2em;
+      border-radius: 9px;
+      font-size: 1.13rem;
       text-align: center;
-      padding: 2.1em 1em 2.1em 1em;
-      background: var(--blue-dark);
-      color: #cecece;
-      font-size: 1.07rem;
-      letter-spacing: 1.05px;
-      font-family: 'Montserrat', Arial, sans-serif;
-      margin-top: 0.2em;
+      margin-top: 1em;
+      margin-bottom: 0.4em;
     }
-    @media (max-width: 1200px){
-      .services-cards, .why-grid { flex-direction: column; align-items: center; gap: 1.5em;}
-      .service-card, .why-card { max-width: 97vw; }
+    @media (max-width: 900px){
+      .contact-section {
+        flex-direction: column;
+        padding: 3em 3vw;
+        align-items: stretch;
+      }
+      .contact-col, .contact-form-col { margin: 0 0 2em 0;}
+      .contact-form-col { max-width:100%;}
     }
-    @media (max-width: 700px){
-      .hero-title { font-size: 2.06rem; }
+    @media (max-width: 700px) {
+      .hero-title { font-size: 2.05rem; }
       .nav-logo { font-size: 1.02rem;}
-      .contact-wrap { max-width:96vw;}
+      .section-title, .why-title, .contact-heading { font-size: 1.13rem;}
     }
-    @media (max-width: 450px){
-      .hero-title { font-size: 1.29rem; }
-      .section-title, .why-title, .contact-title { font-size: 1.14rem;}
+    @media (max-width: 450px) {
+      .contact-section { padding: 2vw; }
     }
   </style>
 </head>
@@ -425,7 +432,7 @@
         <span class="icon"><i class="fa-solid fa-leaf"></i></span>
         <div class="why-text">
           <h4>Energy Savings</h4>
-          <p>Our LED solutions can cut your lighting energy consumption.</p>
+          <p>Our LED solutions can cut your lighting energy consumption by up to 80%.</p>
         </div>
       </div>
       <div class="why-card">
@@ -447,17 +454,55 @@
 
   <!-- CONTACT SECTION -->
   <section id="contact" class="contact-section">
-    <div class="contact-title">Contact Us / Free Quote</div>
-    <div class="contact-wrap">
+    <div class="contact-col">
+      <div class="contact-heading">Contact Information</div>
       <div class="contact-item"><i class="fa-solid fa-phone"></i> (480) 389-6002</div>
       <div class="contact-item"><i class="fa-solid fa-envelope"></i> brighterarizonaled@gmail.com</div>
       <div class="contact-item"><i class="fa-solid fa-location-dot"></i> Phoenix, Arizona</div>
-      <form class="contact-form" autocomplete="off" onsubmit="event.preventDefault(); alert('Thank you! We have received your message and will get back to you soon.'); this.reset();">
-        <input type="text" name="name" placeholder="Your Name *" required>
-        <input type="email" name="email" placeholder="Your Email *" required>
-        <input type="tel" name="phone" placeholder="Phone Number">
-        <textarea name="message" placeholder="Tell us about your project *" required></textarea>
+    </div>
+    <div class="contact-form-col">
+      <form class="contact-form" id="quoteForm" autocomplete="off">
+        <label for="name">Full Name *</label>
+        <input type="text" name="name" id="name" required placeholder="Your Name">
+
+        <label for="email">Email *</label>
+        <input type="email" name="email" id="email" required placeholder="Your Email">
+
+        <label for="phone">Phone</label>
+        <input type="tel" name="phone" id="phone" placeholder="Phone Number">
+
+        <label for="property">Property Type *</label>
+        <select name="property" id="property" required>
+          <option value="">Select property type</option>
+          <option>Single Family Home</option>
+          <option>Multi-Family / Apartment</option>
+          <option>Condo / Townhome</option>
+          <option>Commercial</option>
+          <option>Other</option>
+        </select>
+
+        <label for="squarefeet">Square Footage *</label>
+        <select name="squarefeet" id="squarefeet" required>
+          <option value="">Select estimated square feet</option>
+          <option>&lt;1500 or below sq ft</option>
+          <option>1500-2500 sq ft</option>
+          <option>2500-3500 sq ft</option>
+          <option>3500+ sq ft</option>
+        </select>
+
+        <label for="package">Package Desired *</label>
+        <select name="package" id="package" required>
+          <option value="">Select a package</option>
+          <option>Starter</option>
+          <option>Standard</option>
+          <option>Premium</option>
+        </select>
+
+        <label for="message">Tell us about your project *</label>
+        <textarea name="message" id="message" required placeholder="Tell us about your project and needs..."></textarea>
+
         <button type="submit">Send Message</button>
+        <div id="form-success" class="form-success" style="display:none;">Thank you! We have received your message and will get back to you soon.</div>
       </form>
     </div>
   </section>
@@ -465,6 +510,45 @@
   <footer>
     &copy; 2025 Brighter Arizona LED. All rights reserved.
   </footer>
+  
+  <!-- Discord webhook submit JS -->
+  <script>
+    const WEBHOOK_URL = 'YOUR_DISCORD_WEBHOOK_URL_HERE'; // Replace with your Discord webhook URL
+
+    document.getElementById('quoteForm').addEventListener('submit', async function(e) {
+      e.preventDefault();
+      const name = document.getElementById('name').value.trim();
+      const email = document.getElementById('email').value.trim();
+      const phone = document.getElementById('phone').value.trim();
+      const property = document.getElementById('property').value.trim();
+      const squarefeet = document.getElementById('squarefeet').value.trim();
+      const pkg = document.getElementById('package').value.trim();
+      const message = document.getElementById('message').value.trim();
+
+      // Compose message for Discord
+      const discordMessage = {
+        content: `**New Quote Request from Brighter Arizona LED Website**\n\n` +
+                 `**Name:** ${name}\n` +
+                 `**Email:** ${email}\n` +
+                 `**Phone:** ${phone || 'Not provided'}\n` +
+                 `**Property Type:** ${property}\n` +
+                 `**Square Feet:** ${squarefeet}\n` +
+                 `**Package:** ${pkg}\n` +
+                 `**Project Details:**\n${message}`
+      };
+
+      try {
+        await fetch(WEBHOOK_URL, {
+          method: 'POST',
+          headers: { "Content-Type": "application/json" },
+          body: JSON.stringify(discordMessage)
+        });
+        document.getElementById('form-success').style.display = 'block';
+        this.reset();
+      } catch(err) {
+        alert('There was an issue sending your message. Please try again later.');
+      }
+    });
+  </script>
 </body>
 </html>
-
